objects/Assigned_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Customer_Information__c</fullName>
        <label>Additional Customer Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assign_Recommended_PSR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>"Assign Recommended PSR?" checkbox can be used to assign Cisco Recommended PSR.</description>
        <label>Assign Directly to Recommended PSR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_PSR_SYS1__c</fullName>
        <description>Created as part of P360 Sep '12 release. 
Partner users can't access data for other users, so Gadget can not update the lookup field directly or read user's full name of PSR1 from lookup. 
Gadget will update this field while updating and read name from this field while reading.</description>
        <label>Assigned Partner Sales Rep 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_PSR_SYS2__c</fullName>
        <description>Created as part of P360 Sep '12 release. 
Partner users can't access data for other users, so Gadget can not update the lookup field directly or read user's full name of PSR2 from lookup. 
Gadget will update this field while updating and read name from this field while reading.</description>
        <label>Assigned Partner Sales Rep 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_PSR_SYS3__c</fullName>
        <description>Created as part of P360 Sep '12 release. 
Partner users can't access data for other users, so Gadget can not update the lookup field directly or read user's full name of PSR3 from lookup. 
Gadget will update this field while updating and read name from this field while reading.</description>
        <label>Assigned Partner Sales Rep 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Partner_ID__c</fullName>
        <description>Assigned Partner ID</description>
        <formula>Assigned_Partner__r.Id</formula>
        <label>Assigned Partner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Partner_Sales_Rep_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Partner Sales Rep 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Partners4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Partner_Sales_Rep_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Partner Sales Rep 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Partners3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Partner_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales Rep from the partner assigned to this target account.</description>
        <label>Assigned Partner Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Partners_Sales_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Account assigned to this target account.</description>
        <label>Assigned Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Assigned_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the assignment activated by TAM/TBM</description>
        <label>Assignment Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associated_Partners_On_Account__c</fullName>
        <formula>Customer_Account__r.Allocated_Partner_1__c+ ';' +
Customer_Account__r.Allocated_Partner_2__c+ ';' +
Customer_Account__r.Allocated_Partner_3__c+ ';' +
Customer_Account__r.Allocated_Partner_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associated Partners On Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Rec_PSR_Name__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Hold the Full Name of the Look Up Field "Cisco Recommended PSR" for Gadget.</description>
        <formula>Cisco_Recomended_Partner_Sales_Rep__r.FirstName &amp; " " &amp; Cisco_Recomended_Partner_Sales_Rep__r.LastName</formula>
        <label>Cisco Recommended Partner Sales Rep Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cisco_Recomended_Partner_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cisco Recommended PSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedByName__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Hold the Full Name of the Standard System field "Created By" for Gadget.</description>
        <formula>CreatedBy.FirstName &amp; " " &amp;  CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_FY_Wallet_Total_000__c</fullName>
        <description>Nov 13 Release: To show Current FY Wallet Total associated to Customer Account</description>
        <formula>Customer_Account__r.Current_FY_Wallet_Total_000__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current_FY_Wallet_Total_000</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Country__c</fullName>
        <description>End Customer Country</description>
        <formula>TEXT(Customer_Account__r.Country__c)</formula>
        <label>Customer Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_ID__c</fullName>
        <description>End Customer Account ID</description>
        <formula>Customer_Account__r.Id</formula>
        <label>Customer Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Name__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Hold the Full Name of the Lookup Field "Customer Account"  for Gadget.</description>
        <formula>Customer_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Target Account to whom partners are being assigned</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Assigned_Partner_Customer_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Intelligence__c</fullName>
        <formula>IF( NOT ISNULL(Customer_Account_ID__c) &amp;&amp; NOT ISNULL(Customer_Account__r.CI_Last_Updated_Date__c), 
    HYPERLINK("../"&amp;Customer_Account_ID__c,   $Label.Prm_customIntelligence  , "_parent" ), 
      $Label.Prm_noCiData  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Intelligence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Added__c</fullName>
        <description>Field used to convert data time to date for partner added date time used in SCP communities</description>
        <formula>DATEVALUE(Partner_Added_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Taken_by_PSR_to_Accept__c</fullName>
        <description>Number of days taken by PSR to accept the target prospect assignment</description>
        <formula>IF(ISBLANK( PSR_Accepted_Date_Time__c ),
NULL,
(PSR_Accepted_Date_Time__c - PSR_Assigned_Date_Time__c)
)</formula>
        <label>Days Taken by PSR to Accept</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Taken_to_Activate_Prospect_Partner__c</fullName>
        <formula>IF(
ISBLANK(Partner_Assigned_Date__c),
NULL,
(Partner_Assigned_Date__c - Partner_Added_Date_Time__c )
)</formula>
        <label>Days Taken to Activate Prospect/Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Taken_to_Add_Partner__c</fullName>
        <description>Number of days taken to add partner to target prospect</description>
        <formula>IF(
ISBLANK(Partner_Added_Date_Time__c),
NULL,
(Partner_Added_Date_Time__c - CreatedDate)
)</formula>
        <label>Days Taken to Add Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Taken_to_Assign_PSR__c</fullName>
        <description>Days taken to assign the target prospect to PSR after the target prospect was activated</description>
        <formula>IF(isPSRAssigned__c,
( PSR_Assigned_Date_Time__c - Partner_Assigned_Date__c ),
NULL
)</formula>
        <label>Days Taken to Assign PSR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Without_Patner__c</fullName>
        <description>Running count of days the target prospect without partner</description>
        <formula>IF(
ISBLANK(Assigned_Partner__c),
(NOW() - CreatedDate),
NULL
)</formula>
        <label>Days Without Patner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Create_Date__c</fullName>
        <description>Nov 13 Release: To Store Deal Created Date when a new deal is recorded in Multi Quote Object</description>
        <label>Deal Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Prevention__c</fullName>
        <description>This field display Assign partner id,customer id, technology list of  value.
Nov 13 Release: Changed the Data Type</description>
        <label>Duplicate Prevention</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Link__c</fullName>
        <description>Release: P360 March 2013
Purpose: To Display Expiration Date with a Link to Extend Expiration of TP</description>
        <formula>(IF(NOT(ISPICKVAL(Extend_By__c,'')) &amp;&amp;  NOT(Assignment_Activated__c) ,TEXT(Extend_By__c)&amp; ' After Activation',
IF(
ISBLANK(Expiration_Date__c),
'',
TEXT(Month(Expiration_Date__c)) &amp; '/' &amp; TEXT(Day(Expiration_Date__c)) &amp; '/' &amp; TEXT(Year(Expiration_Date__c))
)))
&amp; '  ' &amp;
HYPERLINK('../apex/P360_TP_Timer?Id='&amp; Id &amp; '&amp;retURL=' &amp; Id , IF(ISBLANK(Expiration_Date__c) &amp;&amp; (ISPICKVAL(Extend_By__c,'')) , '[Add Expiration]','[Manage Visibility]'), '_self')</formula>
        <label>Manage Expiration Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Release: P360 March 2013 
Purpose: To Capture Date on which the TP will Expire and get Deactivated</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extend_By__c</fullName>
        <description>Release: P360 March 2013 
Purpose: Used to extend the Target Prospect Expiration Date by 30,60,90 Days..</description>
        <label>Extend By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>15 Days</fullName>
                </value>
                <value>
                    <fullName>30 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
                <value>
                    <fullName>90 Days</fullName>
                </value>
                <value>
                    <fullName>No Expiration</fullName>
                    <default>true</default>
                    <label>No Expiration</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extension_Reason__c</fullName>
        <description>Release: P360 March 2013 
Purpose: Store the reason for Extension in Expiration Date.This will be nullified by trigger after creating a child record in prospect extensions.</description>
        <label>Extension Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Explicit Extension by Partner</fullName>
                </value>
                <value>
                    <fullName>Initial Expiration with Prospect Upload</fullName>
                </value>
                <value>
                    <fullName>New Deal Creation</fullName>
                </value>
                <value>
                    <fullName>Partner Created Target Prospect Default</fullName>
                </value>
                <value>
                    <fullName>TxM Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry associated with the end customer</description>
        <formula>TEXT(Customer_Account__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedByName__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Hold the Full Name of the Standard System field "Last Modified by" for Gadget.</description>
        <formula>LastModifiedBy.FirstName &amp; " " &amp; LastModifiedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Collateral__c</fullName>
        <description>Nov 13 Release: Field is to store marketing campaign collateral and it can have links</description>
        <label>Marketing Collateral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Play_Description__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Marketing Play Information associated with the target prospect.

FY14 Q2 P360: Changed the Label and API</description>
        <label>Marketing Play Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Play_Information__c</fullName>
        <description>Temprorary Field to be deleted on i-Tune has new code</description>
        <label>Marketing Play Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Play_Name__c</fullName>
        <description>Nov 13 Release: Field is to store marketing campaign name</description>
        <label>Marketing Play Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Partner_on_Activation__c</fullName>
        <description>Should system send email to partner when TP is activated?
Notify Partner upon Activation</description>
        <label>Notify Partner on Activation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSR_Accepted_Date_Time__c</fullName>
        <description>Date/Time PSR Accepted Target Prospect Assignment</description>
        <label>PSR Accepted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PSR_Assigned_Date_Time__c</fullName>
        <description>Date/Time PSR was assigned to the Target Prospect</description>
        <label>PSR Assigned Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Acceptance_Within_3_Days__c</fullName>
        <description>Days taken to Accept by Partner</description>
        <formula>Partner_Accepted_Date__c-Partner_Assigned_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days taken to Accept by Partner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Accepted_Date__c</fullName>
        <description>Date/Time when the Partner accepted the Target Prospect</description>
        <label>Partner Accepted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Added_Date_Time__c</fullName>
        <description>Date/Time Partner was added to the Target Prospect</description>
        <label>Partner Added Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Assigned_Date__c</fullName>
        <description>Date/Time when the Partner was assigned to the Target Prospect</description>
        <label>Prospect/Partner Activated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True when the target prospect/partner is activated.</description>
        <label>Prospect/Partner Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_BEC_ID_PDB__c</fullName>
        <description>BEC ID from PDB</description>
        <formula>Assigned_Partner__r.PDB_BEC_ID__c</formula>
        <label>Partner BEC ID (PDB)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_BEC_ID_PGTMV__c</fullName>
        <description>BEC ID from PGTMV</description>
        <formula>Assigned_Partner__r.BEC_ID__c</formula>
        <label>Partner BEC ID (PGTMV)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_BE_GEO_ID_PDB__c</fullName>
        <description>Partner BE GEO ID from pdb</description>
        <formula>Assigned_Partner__r.PDB_BE_GEO_ID__c</formula>
        <label>Partner BE GEO ID (PDB)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_BE_GEO_ID_PGTMV__c</fullName>
        <description>Partner BE GEO ID from pgtmv</description>
        <formula>Assigned_Partner__r.BE_GEO_ID__c</formula>
        <label>Partner BE GEO ID (PGTMV)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_City__c</fullName>
        <description>Partner City</description>
        <formula>Assigned_Partner__r.CRCity__c</formula>
        <label>Partner City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <description>Contains the country value from the partner channel account.</description>
        <formula>Assigned_Partner__r.CRCountry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Status_Order__c</fullName>
        <description>Release: P360 March 2013 
Purpose: This will store the particular number depends on the partner status. 
This is used for sorting the Target Prospect records based on the partner lead status.</description>
        <formula>IF( ISPICKVAL( Partner_Status__c , 'Assigned (New)') , 1, 
IF( ISPICKVAL( Partner_Status__c , 'Partner Assigned') , 2, 
IF( ISPICKVAL( Partner_Status__c , 'Assigned to PSR') , 3, 
IF( ISPICKVAL( Partner_Status__c , 'Actively Working') , 4, 
IF( ISPICKVAL( Partner_Status__c , 'Rejected') , 5, 
IF( ISPICKVAL( Partner_Status__c , 'Closed') , 6, 7 
) 
) 
) 
) 
)  
)</formula>
        <label>Partner Status Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Status__c</fullName>
        <label>Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned (New)</fullName>
                    <default>true</default>
                    <label>Assigned (New)</label>
                </value>
                <value>
                    <fullName>Partner Assigned</fullName>
                </value>
                <value>
                    <fullName>Assigned to PSR</fullName>
                </value>
                <value>
                    <fullName>Actively Working</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Age__c</fullName>
        <description>Release: P360 March 2013 
Purpose: Store the age of target prospect. Today - Activation Date of Target Prospect.</description>
        <formula>IF(Assignment_Activated__c == true, (Now() -  Partner_Assigned_Date__c), 0)</formula>
        <label>Prospect Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejected_Reason__c</fullName>
        <description>Reason for rejecting the partner Assignment</description>
        <label>Reject/Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SCP_Partner_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Capacity at this time</fullName>
                </value>
                <value>
                    <fullName>Customer outside of my geography</fullName>
                </value>
                <value>
                    <fullName>Customer/vertical outside focus area</fullName>
                </value>
                <value>
                    <fullName>No viable opportunity</fullName>
                </value>
                <value>
                    <fullName>Too small of an opportunity</fullName>
                </value>
                <value>
                    <fullName>Not certified/qualified to provide solution</fullName>
                </value>
                <value>
                    <fullName>Customer has no money/budget/credit/financing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Partner_Status__c</fullName>
        <label>Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Assigned</fullName>
                    <default>true</default>
                    <label>Partner Assigned</label>
                </value>
                <value>
                    <fullName>Assigned to PSR</fullName>
                </value>
                <value>
                    <fullName>Actively Working</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TBM_TAM_Email__c</fullName>
        <label>TBM/TAM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TBM_TAM_Name__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Hold the Full Name of the Look Up field "TBM/TAM" for Gadget.</description>
        <formula>TBM_TAM__r.FirstName &amp; " " &amp;  TBM_TAM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TBM/TAM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBM_TAM_Username__c</fullName>
        <description>Created as part of P360 Sep '12 Release. 
Hold the Username of the Look Up field "TBM/TAM" for Gadget.</description>
        <formula>TBM_TAM__r.Username</formula>
        <label>TBM TAM Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TBM_TAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Territory Business Manager or the Territory Account Manager.</description>
        <label>TBM/TAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Partners2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TP_Conflicts_with_Partner_Allocation__c</fullName>
        <description>Indicates if the TP partner conflicts with Partner Allocation that is set on the end customer account.</description>
        <formula>IF(
 (Target_Prospect_Source__c != 'Partner') &amp;&amp; 
 (Assigned_Partner__c == Customer_Account__r.Allocated_Partner_1__c ||
  Assigned_Partner__c == Customer_Account__r.Allocated_Partner_2__c || 
  Assigned_Partner__c == Customer_Account__r.Allocated_Partner_3__c ||
  Assigned_Partner__c == Customer_Account__r.Allocated_Partner_4__c),
'No',
'Yes'
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TP Conflicts with Partner Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Architecture__c</fullName>
        <label>Target Architecture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Any/All Technologies</fullName>
                </value>
                <value>
                    <fullName>Collaboration-Unified Communications (UC)</fullName>
                </value>
                <value>
                    <fullName>Core-Routing Switching &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Data Center-Unified Computing Systems (UCS)</fullName>
                </value>
                <value>
                    <fullName>Video-TelePresence &amp; Conferencing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Description__c</fullName>
        <label>Target Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Prospect_Owner_ID__c</fullName>
        <description>Target Prospect Owner ID</description>
        <formula>OwnerId</formula>
        <label>Target Prospect Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Prospect_Source__c</fullName>
        <defaultValue>IF(
ISPICKVAL($User.UserType, 'PowerPartner'), 'Partner', 'Cisco'
)</defaultValue>
        <description>Target Prospect Source set to partner</description>
        <label>Target Prospect Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology_Filter__c</fullName>
        <description>This picklist field is used on the TP filter screen</description>
        <inlineHelpText>This picklist field is used on the TP filter screen</inlineHelpText>
        <label>Technology Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collab Applications</fullName>
                </value>
                <value>
                    <fullName>Collab Voice</fullName>
                </value>
                <value>
                    <fullName>DataCenter UCS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Routing</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Switching</fullName>
                </value>
                <value>
                    <fullName>Telepresence</fullName>
                </value>
                <value>
                    <fullName>Wirless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>has_Customer_Intelligence__c</fullName>
        <formula>NOT ISNULL(Customer_Account_ID__c) &amp;&amp; NOT ISNULL(Customer_Account__r.CI_Last_Updated_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>has Customer Intelligence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPSRAssigned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is made to true whenever one of the "Assigned PSR" value is selected</description>
        <label>PSR Assigned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_PA_Assigned_Today__c</fullName>
        <description>Nov 13 Release: To identicate whether PA is assigned Today</description>
        <formula>IF(TODAY() - DATEVALUE(Partner_Assigned_Date__c) =0,"Yes","No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is PA Assigned Today</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_PSR_Assigned_Today__c</fullName>
        <description>Nov 13 Release: To identicate whether PSR is assigned Today</description>
        <formula>IF(TODAY() - DATEVALUE(PSR_Assigned_Date_Time__c) =0,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is PSR Assigned Today</label>
        <type>Checkbox</type>
    </fields>
    <description>Partner assignments of End User Accounts are stored in this object.</description>
    <label>zzTarget Prospect</label>
    <nameField>
        <label>Target Prospect Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Target Prospects</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>ALL_Target_Prospects</fullName>
        <columns>Assignment_Activated__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_Partner__c</columns>
        <columns>Partner_Status__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Partner_Country__c</columns>
        <columns>Target_Architecture__c</columns>
        <columns>Marketing_Play_Description__c</columns>
        <columns>Deal_Create_Date__c</columns>
        <columns>Rejected_Reason__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>ALL Target Prospects</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partner_Accepted_Prospects</fullName>
        <columns>Assignment_Activated__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_Partner__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Partner_Country__c</columns>
        <columns>Target_Architecture__c</columns>
        <columns>Marketing_Play_Description__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Prospect_Age__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Status__c</field>
            <operation>equals</operation>
            <value>Actively Working</value>
        </filters>
        <label>Partner Accepted Prospects</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Partner_Created</fullName>
        <columns>Assignment_Activated__c</columns>
        <columns>NAME</columns>
        <columns>Assigned_Partner__c</columns>
        <columns>Partner_Status__c</columns>
        <columns>Customer_Account__c</columns>
        <columns>Partner_Country__c</columns>
        <columns>Target_Architecture__c</columns>
        <columns>Marketing_Play_Description__c</columns>
        <columns>Rejected_Reason__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Target_Prospect_Source__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>Partner Created</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>